the new thing i added grok  ACII

--- a/index.html
+++ b/index.html
@@ -27,15 +27,27 @@
             <!-- one "card" which includes an image with a text below it -->
             <div class="topic-card">
                 <img src="images/the blob png final.png" alt="green blob">
-                <h2 class="topic-card-text">Placeholder image</h2>
+                <h2 class="topic-card-text">Blob drawing</h2>
             </div>
             <div class="topic-card">
-                <img src="images/AI portad year 10 digi.png" alt="change this too!">
-                <h2 class="topic-card-text">Placeholder image</h2>
+                <img src="images/AI portad year 10 digi.png" alt="AI PORTAD">
+                <h2 class="topic-card-text">AI portrid</h2>
             </div>
             <div class="topic-card">
-                <img src="images/BACKROUND THING final .png" alt="change this too!">
-                <h2 class="topic-card-text">Placeholder image</h2>
+                <img src="images/BACKROUND THING final .png" alt="BACKROUND">
+                <h2 class="topic-card-text">back round drawings</h2>
+            </div>
+            <div class="topic-card">
+                <img src="images/first grok pic.PNG" alt="FIRST PIC!">
+                <h2 class="topic-card-text">My first code I wrote in Grok</h2>
+            </div>
+            <div class="topic-card">
+                <img src="images/last  GROK pic.PNG" alt="LAST PIC!">
+                <h2 class="topic-card-text">My last code I wrote in Grok</h2>
+            </div>
+            <div class="topic-card">
+                <img src="images/tank drawing.PNG" alt="tank">
+                <h2 class="topic-card-text">ASCII art made by me</h2>
             </div>
         </div>
     </section>
@@ -47,7 +59,7 @@
 
     <!-- A Simple Website Footer ------------------------------------------------------------------------------ -->
     <footer class="footer">
-        <p>&copy; 2025 My Showcase Website By Student Name</p>
+        <p>&copy; 2025 My Showcase Website By SOHAIL ZAHIDI</p>
     </footer>
 
 <!-- The end of the whole page- no more content after this! -->
