just some colour

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="topic">
         <!-- the topic title a big bar with text in it -->
         <div class="topic-title">
-            <h1>MY STUFF</h1>
+            <h1>😃WELCOME😃</h1>
         </div>
         <!-- now a three column grid of images -->
         <div class="topic-content">
@@ -35,7 +35,7 @@
             </div>
             <div class="topic-card">
                 <img src="images/BACKROUND THING final .png" alt="BACKROUND">
-                <h2 class="topic-card-text">back round drawings</h2>
+                <h2 class="topic-card-text">My backround</h2>
             </div>
             <div class="topic-card">
                 <img src="images/first grok pic.PNG" alt="FIRST PIC!">
@@ -48,6 +48,14 @@
             <div class="topic-card">
                 <img src="images/tank drawing.PNG" alt="tank">
                 <h2 class="topic-card-text">ASCII art made by me</h2>
+            </div>
+            <div class="topic-card">
+                <img src="images/robloxspic.PNG" alt="my 3d animation">
+                <h2 class="topic-card-text">My 3d animation</h2>
+            </div>
+            <div class="topic-card">
+                <img src="images/cactus.PNG" alt="my 3d model">
+                <h2 class="topic-card-text">My 3d model</h2>
             </div>
         </div>
     </section>
