--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
                 <img src="images/cactus.PNG" alt="my 3d model">
                 <h2 class="topic-card-text">My 3d model</h2>
             </div>
+            <div class="topic-card">
+                <img src="images/3d_room.PNG" alt="my 3d room">
+                <h2 class="topic-card-text">My 3d room</h2>
+            </div>
+            <div class="topic-card">
+                <img src="images/cookie_cutter.PNG" alt="my cookie cutter">
+                <h2 class="topic-card-text">My 3d cookie cutter missle</h2>
+            </div>
         </div>
     </section>
 <!-- End of topic one------------------------------------------------------------------------------------------ -->
