--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
                 <img src="images/cookie_cutter.PNG" alt="my cookie cutter">
                 <h2 class="topic-card-text">My 3d cookie cutter missle</h2>
             </div>
+            <div class="topic-card">
+                <img src="images/cargoship.PNG" alt="my cargo ship">
+                <h2 class="topic-card-text">My 3d cargo ship</h2>
+            </div>
         </div>
     </section>
 <!-- End of topic one------------------------------------------------------------------------------------------ -->
