--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                 <img src="images/cargoship.PNG" alt="my cargo ship">
                 <h2 class="topic-card-text">My 3d cargo ship</h2>
             </div>
+            <div class="topic-card">
+                <a href="https://gd.games/games/8a6c2a5b-9d7e-443e-b545-23bcc19c9e28" alt="game">
+                <h2 class="topic-card-text">Click the link to play my game!</h2>
+            </div>
         </div>
     </section>
 <!-- End of topic one------------------------------------------------------------------------------------------ -->
